# XHisho

./: Imakefile  Imakefile.in  Makefile  Makefile.in  Makefile.in.clang  Msgwin.c  Msgwin.h  MsgwinP.h  README  ResEdit.c  ResEdit.h  XAkari.ad.sed  XHisho.ad.sed  XHisho.c  XHisho.h  XHisho.jp.sed  XHishoP.h  about.c  about.h  acconfig.h  calendar.c  calendar.h  config.h.in  config.tmpl  configure  configure.in  editor.c  gcpp  globaldefs.h  image.c  image.h  load_bmp.c  load_jpeg.c  load_xpm.c  mail.c  mail.h  main.c  makefile.in  md5.h  md5c.c  (+15 more)
apps/: Makefile  Makefile.in  README.jp  countdown.c  countdown.h  res2mes.pl  sstp.c  sstp.pl  surf2anim.pl  xhs.cdown
doc/: 00changes  Custom.jp  README  README.Anim  README.jp  README.mowemowe  README.option  XHisho_FAQ.jp  libmhc
image/: Imakefile.in  image.c  image.h  load_anim.c  load_bmp.c  load_jpeg.c  load_png.c  load_xpm.c
kawari/: Makefile.in  base64.cpp  base64.h  kawari.cpp  kawari.h  kawari.ini  kawari_crypt.cpp  kawari_crypt.h  kawari_interface.cpp
libmhc/: Imakefile.in  libmhc.c  mhc.h
man1/: xhisho.1  xhisho.ja
sample/: Messages  Messages.akari.sed  Messages.aoi  Messages.jp  Messages.ruri  Messages.serika  Petname  Petname.jp  aisatu.cfg  aisatu.cfg.akari  greeting.cfg  mayura.anim  sample_anim.anim  xbiff.anim  xhs.holiday  xhs.weekly  xhs.weekly.jp  xhs0720  xhs0720.jp
xadl/: Imakefile.in  Makefile.in  README.xadl  xadl.l  xadl.y
