dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.c)
AC_CONFIG_HEADER(config.h )

AC_PROG_CC
AC_PROG_INSTALL

dnl Replace `main' with a function in -lxpg4,-nsl,-lsocket:
AC_CHECK_LIB(xpg4, main)
AC_CHECK_LIB(nsl, main)
AC_CHECK_LIB(socket, main)

dnl Check compile options

AC_ARG_WITH(xpm,
        [  --with-xpm        compile for personal],
        [with_xpm=$withval],
        [with_xpm=yes])
test "$with_xpm" = "yes" && AC_DEFINE(WITH_XPM)

dnl XMKMF=`which xmkmf`
dnl XDIR=`dirname ${XMKMF}|tr -d "bin"`
dnl LDFLAGS="$LDFLAGS -L${x_libraries} -L${XDIR}lib"
dnl if test "$with_xpm" = "yes";
dnl then
dnl AC_CHECK_LIB(Xpm, main)
dnl fi

AC_ARG_WITH(jpeg,
        [  --with-jpeg        compile for personal],
        [with_jpeg=$withval],
        [with_jpeg=yes])
test "$with_jpeg" = "yes"

if test "$with_jpeg" = "yes";
then
AC_CHECK_LIB(jpeg, main)
fi

AC_ARG_ENABLE(personal,
        [  --enable-personal        compile for personal],
        [with_personal=$enableval],
        [with_personal=no])
test "$with_personal" = "yes" && AC_DEFINE(PERSONAL)

AC_ARG_ENABLE(ext_filter,
        [  --disable-ext_filter     don't use external filter],
        [with_ext_filter=$enableval],
        [with_ext_filter=yes])
test "$with_ext_filter" = "yes" && AC_DEFINE(EXT_FILTER)

AC_ARG_ENABLE(petname,
        [  --disable-petname     don't use petname],
        [with_petname=$enableval],
        [with_petname=yes])
test "$with_petname" = "yes" && AC_DEFINE(PETNAME)

AC_ARG_ENABLE(i18n,
        [  --disable-i18n     don't use I18N messages],
        [with_i18n=$enableval],
        [with_i18n=yes])
test "$with_i18n" = "yes" && AC_DEFINE(I18N)

AC_ARG_ENABLE(abook,
        [  --enable-abook     use address book],
        [with_abook=$enableval],
        [with_abook=no])
test "$with_abook" = "yes" && AC_DEFINE(ABOOK)

AC_ARG_ENABLE(akari,
        [  --enable-akari     for XAkari :-)],
        [with_akari=$enableval],
        [with_akari=no])
test "$with_akari" = "yes" && AC_DEFINE(AKARI)




AC_OUTPUT(makefile apps/Makefile Imakefile)
