dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.c)
AC_CONFIG_HEADER(config.h )

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LEX
AC_PROG_YACC
AC_SUBST(prefix)
AC_SUBST(exec_prefix)
AC_SUBST(bindir)


dnl Replace `main' with a function in -lxpg4,-nsl,-lsocket:
AC_CHECK_LIB(xpg4, setlocale)
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(socket, socket)

dnl Check compile options

if test "$prefix" != "NONE" 
   then PR="PREFIX=$prefix"
   AC_DEFINE(PREF)
fi

LDFLAGS="$LDFLAGS -L/usr/local/lib"

if test "${libdir}" != "NONE"
then
  LDFLAGS="$LDFLAGS -L${libdir}"
fi 

AC_ARG_WITH(xpm,
        [  --without-xpm           compile without XPM library],
        [with_xpm=$withval],
        [with_xpm=yes])
test "$with_xpm" = "yes"

if test "$with_xpm" = "yes";
then
  XMKMF=`which xmkmf`
  XDIR=`dirname ${XMKMF}|tr -d "bin"`

  if test "${x_libraries}" != "NONE"
  then
    LDFLAGS="$LDFLAGS -L${x_libraries}"
  fi

  if test "${XDIR}" != "NONE"
  then
    LDFLAGS="$LDFLAGS -L${XDIR}lib"
  fi

  AC_CHECK_LIB(X11, XOpenDisplay)
  AC_CHECK_LIB(Xpm, XpmReadFileToXpmImage)
fi

AC_ARG_WITH(jpeg,
        [  --without-jpeg          compile without JPEG library],
        [with_jpeg=$withval],
        [with_jpeg=yes])
test "$with_jpeg" = "yes"

if test "$with_jpeg" = "yes";
then
AC_CHECK_LIB(jpeg,jpeg_destroy_decompress)
fi

AC_ARG_WITH(png,
        [  --without-png           compile without PNG library],
        [with_png=$withval],
        [with_png=yes])
test "$with_png" = "yes"

if test "$with_png" = "yes";
then
AC_CHECK_LIB(png, png_create_read_struct)
fi

AC_ARG_ENABLE(personal,
        [  --enable-personal       compile for personal],
        [with_personal=$enableval],
        [with_personal=no])
test "$with_personal" = "yes" && AC_DEFINE(PERSONAL)

AC_ARG_ENABLE(ext_filter,
        [  --disable-ext_filter    don't use external filter],
        [with_ext_filter=$enableval],
        [with_ext_filter=yes])
test "$with_ext_filter" = "yes" && AC_DEFINE(EXT_FILTER)

AC_ARG_ENABLE(petname,
        [  --disable-petname       don't use petname],
        [with_petname=$enableval],
        [with_petname=yes])
test "$with_petname" = "yes" && AC_DEFINE(PETNAME)

AC_ARG_ENABLE(i18n,
        [  --disable-i18n          don't use I18N messages],
        [with_i18n=$enableval],
        [with_i18n=yes])
test "$with_i18n" = "yes" && AC_DEFINE(I18N)

AC_ARG_ENABLE(abook,
        [  --enable-abook          use address book],
        [with_abook=$enableval],
        [with_abook=no])
test "$with_abook" = "yes" && AC_DEFINE(ABOOK)

AC_ARG_ENABLE(akari,
        [  --enable-akari          for XAkari :-)],
        [with_akari=$enableval],
        [with_akari=no])
test "$with_akari" = "yes" && AC_DEFINE(AKARI)

AC_ARG_ENABLE(libmhc,
        [  --enable-libmhc       use libmhc],
        [with_libmhc=$enableval],
        [with_libmhc=no])
test "$with_libmhc" = "yes" && AC_DEFINE(LIBMHC)




AC_OUTPUT(Makefile apps/Makefile Imakefile image/Imakefile xadl/Imakefile libmhc/Imakefile)
